[package]
name = "twitch_views"
version = "0.1.0"
authors = ["JeanV0"]
edition = "2021"
repository = ""
license = "GPL-3.0-only"
description = "System fake viewer twitch"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["std"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rand = {version = "0.8.5", features = ["std_rng"] }
dotenv = "0.15.0"
reqwest-middleware = "0.2"
url = {version = "2.2.2"}
reqwest-retry = "0.2"
http = "0.2.8"
m3u8-rs = {version = "5.0.4", features = ["parser"]}

[profile.release]
opt-level = "z"
lto = true
debug = false